@@ -1,3 +1,3 @@
-Bullet Collision Detection and Physics Library version 2.50b
+Bullet Collision Detection and Physics Library version 2.51
 http://bullet.sourceforge.net
 
